TP PGC | Minor tweaks (Base)

--- a/TP_PGC/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TP_PGC/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -165,6 +165,7 @@ LastLevel=/Game/Levels/Level_Test
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/PillarGenerator/_Base/SBP_PillarGenerator_BASE.SBP_PillarGenerator_BASE
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -816,6 +817,19 @@ StaticMeshComponent.Variable=True
 StaticMeshComponent.Cooking=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
+SBP_PillarGenerator_BASE_C.TransformCommon=True
+SBP_PillarGenerator_BASE_C.SBP Pillar Generator=True
+SBP_PillarGenerator_BASE_C.Rendering=True
+SBP_PillarGenerator_BASE_C.Replication=True
+SBP_PillarGenerator_BASE_C.Collision=True
+SBP_PillarGenerator_BASE_C.HLOD=True
+SBP_PillarGenerator_BASE_C.Physics=True
+SBP_PillarGenerator_BASE_C.Networking=True
+SBP_PillarGenerator_BASE_C.Input=True
+SBP_PillarGenerator_BASE_C.Actor=True
+SBP_PillarGenerator_BASE_C.Tick=True
+SBP_PillarGenerator_BASE_C.WorldPartition=True
+SBP_PillarGenerator_BASE_C.Events=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -834,7 +848,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/PillarGenerator
+ContentBrowserTab1.SelectedPaths=/Game/PillarGenerator/_Base
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -915,10 +929,11 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PillarGenerator/SBP_PillarGenerator
-MRUItem1=/Game/PillarGenerator/_Materials/M_Pillar_Top
-MRUItem2=/Game/PillarGenerator/_Materials/M_Pillar_Mid
-MRUItem3=/Game/PillarGenerator/_Materials/M_Pillar_Base
+MRUItem0=/Game/PillarGenerator/_Base/SBP_PillarGenerator_BASE
+MRUItem1=/Game/PillarGenerator/SBP_PillarGenerator
+MRUItem2=/Game/PillarGenerator/_Materials/M_Pillar_Top
+MRUItem3=/Game/PillarGenerator/_Materials/M_Pillar_Mid
+MRUItem4=/Game/PillarGenerator/_Materials/M_Pillar_Base
 
 [MaterialEditor]
 PrimType=1
@@ -1084,8 +1099,10 @@ bMaterialQualityUsed[3]=0
 [AssetEditorToolkitTabLocation]
 /Game/PillarGenerator/_Materials/M_Pillar_Mid.M_Pillar_Mid=1
 /Game/PillarGenerator/SBP_PillarGenerator.SBP_PillarGenerator=1
+/Game/PillarGenerator/_Base/SBP_PillarGenerator_BASE.SBP_PillarGenerator_BASE=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/PillarGenerator/_Base/SBP_PillarGenerator_BASE.SBP_PillarGenerator_BASE;
 RecentlyPlaced=/Game/PillarGenerator/SBP_PillarGenerator.SBP_PillarGenerator;
 
 [SuppressableDialogs]
@@ -1147,7 +1164,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=329.600
-WindowSize=X=1281.600 Y=721.600
+WindowSize=X=1283.200 Y=723.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1164,7 +1181,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/_JV/_Cours/_SupCrea/2023/TP_PGC/Content/Levels
+UNR=E:/_JV/_Cours/_SupCrea/2023/TP_PGC_Depot/TP_PGC_GitHub/TP_PGC/Content/Levels
 BRUSH=E:/_JV/_Cours/_SupCrea/2023/TP_PGC/Content/
 FBX=E:/_JV/_Cours/_SupCrea/2023/TP_PGC/Content/
 FBXAnim=E:/_JV/_Cours/_SupCrea/2023/TP_PGC/Content/
